[gd_scene load_steps=31 format=3 uid="uid://dyu0t1x11boek"]

[ext_resource type="Material" uid="uid://c78qerjjpjysg" path="res://materials/light_proto.tres" id="1_v3bjq"]
[ext_resource type="Material" uid="uid://b5anjtaljnhvs" path="res://materials/dark_proto.tres" id="2_0w2sq"]
[ext_resource type="Material" uid="uid://ctir88q3d86hv" path="res://materials/orange_proto.tres" id="3_buif5"]
[ext_resource type="PackedScene" uid="uid://bw42rj1kwnyl" path="res://shells/Husk.tscn" id="4_1t4xu"]
[ext_resource type="PackedScene" uid="uid://b3cny3iljmcwh" path="res://shells/roller_machinegun.tscn" id="4_5clly"]
[ext_resource type="PackedScene" uid="uid://4pb4cmdkvqam" path="res://ghosts/dummy_ghost.tscn" id="5_2lejl"]
[ext_resource type="PackedScene" uid="uid://cht1nvmsvv4nx" path="res://interactive/popup_area.tscn" id="6_l60nu"]
[ext_resource type="PackedScene" uid="uid://bu57v5cln1y64" path="res://interactive/checkpoint.tscn" id="7_0mppu"]
[ext_resource type="PackedScene" uid="uid://brhsd0u2va3ch" path="res://interactive/sliding_door.tscn" id="8_xnapt"]
[ext_resource type="Script" path="res://interactive/wave_spawner.gd" id="9_gbe8j"]
[ext_resource type="PackedScene" uid="uid://br42dtyoaodv8" path="res://interactive/enemy_spawner.tscn" id="10_55o8b"]
[ext_resource type="Script" path="res://interactive/trigger_spawner.gd" id="11_5tn5s"]
[ext_resource type="Material" uid="uid://c6i0lcpxsw8jl" path="res://materials/glassy.tres" id="12_aa8rx"]
[ext_resource type="PackedScene" uid="uid://cpqfimtyl8vh3" path="res://shells/drone.tscn" id="13_uqtvl"]
[ext_resource type="Script" path="res://interactive/multiwave.gd" id="14_3clq5"]
[ext_resource type="Script" path="res://interactive/enemy_spawner.gd" id="15_ega8m"]
[ext_resource type="PackedScene" uid="uid://y4efc42n87hi" path="res://shells/roller_machinegun_buffed.tscn" id="16_x4yxp"]
[ext_resource type="PackedScene" uid="uid://citqaeuav6del" path="res://shells/revenant.tscn" id="17_2y2m7"]
[ext_resource type="PackedScene" uid="uid://bdtj1l4cxv5j1" path="res://interactive/tp-trigger.tscn" id="18_r3qmj"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_k5u10"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_2n6pn"]
sky_material = SubResource("ProceduralSkyMaterial_k5u10")

[sub_resource type="Environment" id="Environment_s63vt"]
background_mode = 2
sky = SubResource("Sky_2n6pn")
tonemap_mode = 2
glow_enabled = true
fog_enabled = true
fog_light_energy = 0.5
fog_density = 0.02
fog_sky_affect = 0.748
fog_height = -45.0
fog_height_density = 1.008

[sub_resource type="NavigationMesh" id="NavigationMesh_gv2i2"]
vertices = PackedVector3Array(5.69695, 4.1704, -7.2583, 5.69695, 4.1704, -14.5083, -5.80305, 4.1704, -14.5083, -5.80305, 4.1704, -7.2583, -5.80305, 4.1704, 7.2417, -5.80305, 4.1704, 14.7417, 5.69695, 4.1704, 14.7417, 5.69695, 4.1704, 7.2417, 5.69695, 4.1704, -0.00829983, 5.69695, 4.1704, -7.2583, -5.80305, 4.1704, -7.2583, -5.80305, 4.1704, -0.00829983, -5.80305, 4.1704, -0.00829983, -5.80305, 4.1704, 7.2417, 5.69695, 4.1704, 7.2417, 5.69695, 4.1704, -0.00829983, -13.8031, 2.1704, -13.0083, -20.5531, 2.1704, -13.0083, -20.5531, 2.1704, -6.7583, -13.8031, 2.1704, -0.2583, -6.80305, 2.1704, -0.2583, -6.80305, 2.1704, -6.7583, -20.5531, 2.1704, -6.7583, -20.5531, 2.1704, -0.2583, -13.8031, 2.1704, -0.2583, -6.80305, 2.1704, -6.7583, -6.80305, 2.1704, -13.0083, -13.8031, 2.1704, -13.0083, -0.053051, -3.0796, -10.5083, -0.303051, -3.0796, -11.7583, -5.05305, -3.0796, -12.7583, -5.05305, -3.0796, -1.7583, -5.05305, -3.0796, -12.7583, -0.303051, -3.0796, -11.7583, 0.946949, -3.0796, -12.0083, 4.94695, -3.0796, -12.7583, -5.05305, -3.0796, -12.7583, 0.946949, -3.0796, -12.0083, 4.94695, -3.0796, -12.7583, 0.946949, -3.0796, -12.0083, 1.19695, -3.0796, -10.7583, 4.94695, -3.0796, -1.7583, 4.94695, -3.0796, -1.7583, 1.19695, -3.0796, -10.7583, -0.053051, -3.0796, -10.5083, -5.05305, -3.0796, -1.7583, -13.3031, -3.5796, -12.0083, -19.5531, -3.5796, -12.0083, -19.5531, -3.5796, -1.0083, -13.3031, -3.5796, -0.7583, -6.80305, -3.5796, -1.0083, -6.80305, -3.5796, -12.0083, -13.3031, -3.5796, -12.0083, -13.3031, -3.5796, -0.7583, -10.8031, -3.3296, 17.4917, -10.8031, -3.3296, 14.4917, -12.0531, -3.3296, 14.7417, -16.0531, -3.3296, 17.4917, -12.3031, -3.3296, 13.4917, -10.8031, -3.3296, 13.4917, -10.8031, -3.3296, 6.9917, -16.0531, -3.3296, 8.9917, -16.0531, -3.3296, 17.4917, -12.0531, -3.3296, 14.7417, -12.3031, -3.3296, 13.4917, -16.0531, -3.3296, 8.9917, -16.0531, -3.3296, 0.7417, -16.0531, -3.3296, 8.9917, -10.8031, -3.3296, 6.9917, -10.8031, -3.3296, 0.7417, -10.0531, 0.9204, 8.9917, -10.0531, 0.9204, 0.7417, -16.8031, 0.9204, 0.7417, -16.8031, 0.9204, 8.9917, -16.8031, 0.9204, 8.9917, -16.8031, 0.9204, 17.4917, -10.0531, 0.9204, 17.4917, -10.0531, 0.9204, 8.9917, -5.30305, -3.0796, 4.2417, -1.05305, -3.0796, 3.9917, -0.803051, -3.0796, 3.4917, -5.30305, -3.0796, 1.4917, 0.946949, -3.0796, 3.4917, 1.19695, -3.0796, 3.9917, 5.44695, -3.0796, 4.2417, 5.44695, -3.0796, 1.4917, -0.803051, -3.0796, 3.4917, 0.946949, -3.0796, 3.4917, 5.44695, -3.0796, 1.4917, -5.30305, -3.0796, 1.4917, 5.44695, -3.0796, 4.2417, 1.19695, -3.0796, 3.9917, 0.946949, -3.0796, 5.7417, 5.44695, -3.0796, 13.7417, -0.803051, -3.0796, 5.7417, -1.05305, -3.0796, 3.9917, -5.30305, -3.0796, 4.2417, -5.30305, -3.0796, 13.7417, -5.30305, -3.0796, 13.7417, 5.44695, -3.0796, 13.7417, 0.946949, -3.0796, 5.7417, -0.803051, -3.0796, 5.7417, -13.5531, 12.4204, 18.4917, -24.0531, 12.4204, 18.4917, -24.0531, 12.4204, 25.7417, -24.0531, 12.4204, 40.4917, -24.0531, 12.4204, 47.9917, -13.5531, 12.4204, 47.9917, -2.80305, 12.4204, 25.7417, -2.80305, 12.4204, 18.4917, -13.5531, 12.4204, 18.4917, -13.5531, 12.4204, 47.9917, -2.80305, 12.4204, 47.9917, -2.80305, 12.4204, 40.4917, -24.0531, 12.4204, 33.2417, -24.0531, 12.4204, 40.4917, -13.5531, 12.4204, 47.9917, -2.80305, 12.4204, 40.4917, -2.80305, 12.4204, 33.2417, -13.5531, 12.4204, 18.4917, -13.5531, 12.4204, 18.4917, -24.0531, 12.4204, 25.7417, -24.0531, 12.4204, 33.2417, -2.80305, 12.4204, 33.2417, -2.80305, 12.4204, 25.7417, -13.5531, 12.4204, 18.4917, -15.5531, -4.0796, 46.9917, -8.05305, -4.0796, 46.9917, -8.05305, -4.0796, 42.7417, -22.8031, -4.0796, 39.7417, -22.8031, -4.0796, 46.9917, -15.5531, -4.0796, 46.9917, -13.5531, -4.0796, 18.9917, -22.8031, -4.0796, 18.7417, -22.8031, -4.0796, 25.7417, -8.05305, -4.0796, 42.7417, -4.05305, -4.0796, 42.4917, -4.05305, -4.0796, 30.4917, -4.05305, -4.0796, 30.4917, -4.05305, -4.0796, 18.7417, -13.5531, -4.0796, 18.9917, -22.8031, -4.0796, 39.7417, -15.5531, -4.0796, 46.9917, -8.05305, -4.0796, 42.7417, -4.05305, -4.0796, 30.4917, -13.5531, -4.0796, 18.9917, -22.8031, -4.0796, 32.7417, -13.5531, -4.0796, 18.9917, -22.8031, -4.0796, 25.7417, -22.8031, -4.0796, 32.7417, -22.8031, 4.9204, 39.9917, -22.8031, 4.9204, 46.9917, -13.5531, 4.9204, 46.9917, -13.5531, 4.9204, 18.9917, -22.8031, 4.9204, 18.9917, -22.8031, 4.9204, 25.9917, -13.5531, 4.9204, 46.9917, -4.05305, 4.9204, 46.9917, -4.05305, 4.9204, 39.9917, -4.05305, 4.9204, 25.9917, -4.05305, 4.9204, 18.9917, -13.5531, 4.9204, 18.9917, -22.8031, 4.9204, 32.9917, -22.8031, 4.9204, 39.9917, -13.5531, 4.9204, 46.9917, -4.05305, 4.9204, 39.9917, -4.05305, 4.9204, 32.9917, -13.5531, 4.9204, 18.9917, -13.5531, 4.9204, 18.9917, -22.8031, 4.9204, 25.9917, -22.8031, 4.9204, 32.9917, -4.05305, 4.9204, 32.9917, -4.05305, 4.9204, 25.9917, -13.5531, 4.9204, 18.9917, -7.05305, 0.6704, 43.4917, -7.05305, 0.6704, 46.9917, -4.05305, 0.6704, 46.9917, -4.05305, 0.6704, 43.4917)
polygons = [PackedInt32Array(3, 2, 0), PackedInt32Array(0, 2, 1), PackedInt32Array(7, 6, 4), PackedInt32Array(4, 6, 5), PackedInt32Array(11, 10, 8), PackedInt32Array(8, 10, 9), PackedInt32Array(15, 14, 12), PackedInt32Array(12, 14, 13), PackedInt32Array(17, 16, 18), PackedInt32Array(18, 16, 19), PackedInt32Array(19, 16, 21), PackedInt32Array(19, 21, 20), PackedInt32Array(24, 23, 22), PackedInt32Array(27, 26, 25), PackedInt32Array(29, 28, 30), PackedInt32Array(30, 28, 31), PackedInt32Array(34, 33, 32), PackedInt32Array(37, 36, 35), PackedInt32Array(39, 38, 40), PackedInt32Array(40, 38, 41), PackedInt32Array(43, 42, 44), PackedInt32Array(44, 42, 45), PackedInt32Array(47, 46, 48), PackedInt32Array(48, 46, 49), PackedInt32Array(51, 50, 52), PackedInt32Array(52, 50, 53), PackedInt32Array(55, 54, 56), PackedInt32Array(56, 54, 57), PackedInt32Array(58, 61, 59), PackedInt32Array(59, 61, 60), PackedInt32Array(63, 62, 64), PackedInt32Array(64, 62, 65), PackedInt32Array(69, 68, 66), PackedInt32Array(66, 68, 67), PackedInt32Array(73, 72, 70), PackedInt32Array(70, 72, 71), PackedInt32Array(77, 76, 74), PackedInt32Array(74, 76, 75), PackedInt32Array(79, 78, 80), PackedInt32Array(80, 78, 81), PackedInt32Array(83, 82, 84), PackedInt32Array(84, 82, 85), PackedInt32Array(86, 89, 87), PackedInt32Array(87, 89, 88), PackedInt32Array(91, 90, 92), PackedInt32Array(92, 90, 93), PackedInt32Array(95, 94, 96), PackedInt32Array(96, 94, 97), PackedInt32Array(101, 100, 98), PackedInt32Array(98, 100, 99), PackedInt32Array(104, 103, 102), PackedInt32Array(107, 106, 105), PackedInt32Array(110, 109, 108), PackedInt32Array(113, 112, 111), PackedInt32Array(115, 114, 116), PackedInt32Array(116, 114, 117), PackedInt32Array(117, 114, 118), PackedInt32Array(118, 114, 119), PackedInt32Array(122, 121, 120), PackedInt32Array(125, 124, 123), PackedInt32Array(128, 127, 126), PackedInt32Array(131, 130, 129), PackedInt32Array(134, 133, 132), PackedInt32Array(137, 136, 135), PackedInt32Array(140, 139, 138), PackedInt32Array(141, 146, 142), PackedInt32Array(142, 146, 143), PackedInt32Array(143, 146, 144), PackedInt32Array(144, 146, 145), PackedInt32Array(149, 148, 147), PackedInt32Array(152, 151, 150), PackedInt32Array(155, 154, 153), PackedInt32Array(158, 157, 156), PackedInt32Array(161, 160, 159), PackedInt32Array(163, 162, 164), PackedInt32Array(164, 162, 165), PackedInt32Array(165, 162, 166), PackedInt32Array(166, 162, 167), PackedInt32Array(170, 169, 168), PackedInt32Array(172, 171, 173), PackedInt32Array(177, 176, 174), PackedInt32Array(174, 176, 175)]

[sub_resource type="BoxShape3D" id="BoxShape3D_k2ejs"]
size = Vector3(4.91871, 1, 5.88833)

[sub_resource type="BoxShape3D" id="BoxShape3D_5sfht"]
size = Vector3(4.1971, 1, 6.98446)

[sub_resource type="BoxShape3D" id="BoxShape3D_swgb6"]
size = Vector3(1, 2.9065, 11.7741)

[sub_resource type="BoxShape3D" id="BoxShape3D_6sldw"]
size = Vector3(6.32254, 4.10329, 1.18007)

[sub_resource type="BoxShape3D" id="BoxShape3D_3phxa"]
size = Vector3(6.31719, 4.00116, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_mwm07"]
size = Vector3(19.8284, 8.03872, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_m047r"]
size = Vector3(274.718, 2.31082, 318.751)

[node name="first_level" type="Node3D"]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_s63vt")

[node name="NavigationRegion3D" type="NavigationRegion3D" parent="."]
navigation_mesh = SubResource("NavigationMesh_gv2i2")

[node name="Geometry" type="CSGCombiner3D" parent="NavigationRegion3D"]
use_collision = true

[node name="Room1" type="CSGBox3D" parent="NavigationRegion3D/Geometry"]
size = Vector3(12.3984, 7.64734, 30.0166)

[node name="Subtractor1" type="CSGBox3D" parent="NavigationRegion3D/Geometry/Room1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 7.55759)
operation = 2
size = Vector3(12.0599, 7.02059, 13.3831)
material = ExtResource("2_0w2sq")

[node name="SpotLight3D" type="SpotLight3D" parent="NavigationRegion3D/Geometry/Room1"]
transform = Transform3D(1, 0, 0, 0, 0.258819, 0.965926, 0, -0.965926, 0.258819, 0, 2.66522, 6.18528)
light_energy = 3.0
spot_range = 10.5675
spot_angle = 20.9061

[node name="Podium" type="CSGBox3D" parent="NavigationRegion3D/Geometry/Room1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -2.83798, 4.50944)
size = Vector3(0.214503, 1.3725, 0.214363)
material = ExtResource("2_0w2sq")

[node name="CSGBox3D" type="CSGBox3D" parent="NavigationRegion3D/Geometry/Room1/Podium"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.612892, 0)
size = Vector3(1, 0.175877, 1)
material = ExtResource("3_buif5")

[node name="Shell" parent="NavigationRegion3D/Geometry/Room1/Podium" instance=ExtResource("4_5clly")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 1.31565, 0)
possess_cost = 0.0

[node name="GhostMount" parent="NavigationRegion3D/Geometry/Room1/Podium/Shell" index="3" node_paths=PackedStringArray("ghost")]
ghost = NodePath("DummyGhost")

[node name="RollerGhost" parent="NavigationRegion3D/Geometry/Room1/Podium/Shell/GhostMount" index="0" node_paths=PackedStringArray("ghost_mount")]
ghost_mount = NodePath("..")

[node name="DummyGhost" parent="NavigationRegion3D/Geometry/Room1/Podium/Shell/GhostMount" index="1" node_paths=PackedStringArray("ghost_mount") instance=ExtResource("5_2lejl")]
ghost_mount = NodePath("..")

[node name="PopupArea" parent="NavigationRegion3D/Geometry/Room1/Podium" instance=ExtResource("6_l60nu")]
message = "Press 'F\" to possess a body that you are looking at. This uses STYLE POINTS."

[node name="CollisionShape3D" type="CollisionShape3D" parent="NavigationRegion3D/Geometry/Room1/Podium/PopupArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1.09228)
shape = SubResource("BoxShape3D_k2ejs")

[node name="Subtractor2" type="CSGBox3D" parent="NavigationRegion3D/Geometry/Room1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -7.22547)
operation = 2
size = Vector3(11.2022, 6.94637, 12.3558)
material = ExtResource("1_v3bjq")

[node name="VentSubtractor" type="CSGBox3D" parent="NavigationRegion3D/Geometry/Room1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.99148, -2.67779, 0)
operation = 2
size = Vector3(2.08829, 1.56311, 2.41313)
material = ExtResource("2_0w2sq")

[node name="SpotLight3D2" type="SpotLight3D" parent="NavigationRegion3D/Geometry/Room1/VentSubtractor"]
transform = Transform3D(1, 0, 0, 0, -0.866025, 0.5, 0, -0.5, -0.866025, 0.0508883, 1.58189, -4.07767)
light_color = Color(1, 0.0745098, 0.239216, 1)
light_energy = 5.519
spot_range = 8.01223
spot_angle = 18.2447

[node name="Checkpoint" parent="NavigationRegion3D/Geometry/Room1" instance=ExtResource("7_0mppu")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.49038, -2.90847, -10.0906)

[node name="SpotLight3D3" type="SpotLight3D" parent="NavigationRegion3D/Geometry/Room1/Checkpoint"]
transform = Transform3D(1, 0, 0, 0, -2.98023e-08, 1, 0, -1, -2.98023e-08, 0.285739, 5.73262, -1.11861)
light_color = Color(1, 0.0745098, 0.239216, 1)
light_energy = 5.519
spot_range = 8.01223
spot_angle = 18.2447

[node name="PopupArea" parent="NavigationRegion3D/Geometry/Room1/Checkpoint" instance=ExtResource("6_l60nu")]
message = "Stand under a checkpoint to save your progress. You may reset with 'R'."

[node name="CollisionShape3D" type="CollisionShape3D" parent="NavigationRegion3D/Geometry/Room1/Checkpoint/PopupArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.232029)
shape = SubResource("BoxShape3D_5sfht")

[node name="DoorSubtractor" type="CSGBox3D" parent="NavigationRegion3D/Geometry/Room1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5.74536, -1.77506, -6.57255)
operation = 2
size = Vector3(1, 3.56615, 3.20482)

[node name="SlidingDoor" parent="NavigationRegion3D/Geometry/Room1/DoorSubtractor" instance=ExtResource("8_xnapt")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.7279, 0)
initially_open = true

[node name="Room2" type="CSGBox3D" parent="NavigationRegion3D/Geometry"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -13.4641, -1.0558, -6.51267)
size = Vector3(14.7626, 5.87271, 13.5008)

[node name="Subtractor" type="CSGBox3D" parent="NavigationRegion3D/Geometry/Room2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.447685, 0, 0)
operation = 2
size = Vector3(14.3314, 5.58963, 12.4824)
material = ExtResource("1_v3bjq")

[node name="Encounter" type="Area3D" parent="NavigationRegion3D/Geometry/Room2"]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape3D" type="CollisionShape3D" parent="NavigationRegion3D/Geometry/Room2/Encounter"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3, -0.750442, 0)
shape = SubResource("BoxShape3D_swgb6")

[node name="WaveSpawner" type="Node3D" parent="NavigationRegion3D/Geometry/Room2/Encounter"]
script = ExtResource("9_gbe8j")

[node name="EnemySpawner" parent="NavigationRegion3D/Geometry/Room2/Encounter/WaveSpawner" instance=ExtResource("10_55o8b")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.27927, -1.99202, 0)
enemy = ExtResource("4_5clly")

[node name="EnemySpawner2" parent="NavigationRegion3D/Geometry/Room2/Encounter/WaveSpawner" instance=ExtResource("10_55o8b")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.27927, -1.99202, 4.10549)
enemy = ExtResource("4_5clly")

[node name="EnemySpawner3" parent="NavigationRegion3D/Geometry/Room2/Encounter/WaveSpawner" instance=ExtResource("10_55o8b")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.27927, -1.99202, -4.0803)
enemy = ExtResource("4_5clly")

[node name="DoorHole" type="CSGBox3D" parent="NavigationRegion3D/Geometry/Room2"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, -1.03531, 6.39316)
operation = 2
size = Vector3(1, 3.32838, 3.20982)

[node name="SlidingDoor" parent="NavigationRegion3D/Geometry/Room2/DoorHole" instance=ExtResource("8_xnapt")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.73089, 0)

[node name="Room3" type="CSGBox3D" parent="NavigationRegion3D/Geometry"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -13.4339, -1.69764, 8.99804)
size = Vector3(7.45036, 4.53824, 18.0991)

[node name="Subtractor" type="CSGBox3D" parent="NavigationRegion3D/Geometry/Room3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.100252)
operation = 2
size = Vector3(6.39751, 4.13785, 18.4838)
material = ExtResource("2_0w2sq")

[node name="FlankEncounter" type="Area3D" parent="NavigationRegion3D/Geometry/Room3"]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape3D" type="CollisionShape3D" parent="NavigationRegion3D/Geometry/Room3/FlankEncounter"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 7.24057)
shape = SubResource("BoxShape3D_6sldw")

[node name="EnemySpawner" parent="NavigationRegion3D/Geometry/Room3/FlankEncounter" node_paths=PackedStringArray("trigger_area") instance=ExtResource("10_55o8b")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.13225, -7.03491)
script = ExtResource("11_5tn5s")
trigger_area = NodePath("..")
enemy = ExtResource("4_5clly")

[node name="PopupArea" parent="NavigationRegion3D/Geometry/Room3" instance=ExtResource("6_l60nu")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -3)
message = "The only way to get more health or ammo is by possessing a healthier host."

[node name="CollisionShape3D" type="CollisionShape3D" parent="NavigationRegion3D/Geometry/Room3/PopupArea"]
shape = SubResource("BoxShape3D_3phxa")

[node name="Checkpoint" parent="NavigationRegion3D/Geometry/Room3" instance=ExtResource("7_0mppu")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0.658293, -1.2823, 4.91918)

[node name="Room4" type="CSGBox3D" parent="NavigationRegion3D/Geometry"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -13.4941, 3.55319, 33.2669)
size = Vector3(22.1179, 16.8999, 30.5414)

[node name="Subtractor" type="CSGBox3D" parent="NavigationRegion3D/Geometry/Room4"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.476364)
operation = 2
size = Vector3(20.0736, 15.8057, 29.4403)
material = ExtResource("1_v3bjq")

[node name="OmniLight3D" type="OmniLight3D" parent="NavigationRegion3D/Geometry/Room4"]
light_energy = 3.735
omni_range = 24.286

[node name="DroneGlass" type="CSGBox3D" parent="NavigationRegion3D/Geometry/Room4"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.951594, -0.274513)
size = Vector3(19.7602, 0.207357, 28.7518)
material = ExtResource("12_aa8rx")

[node name="DoorHole" type="CSGBox3D" parent="NavigationRegion3D/Geometry/Room4"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0.0299587, -5.6443, -15.198)
operation = 2
size = Vector3(1, 3.32838, 3.20982)

[node name="SlidingDoor" parent="NavigationRegion3D/Geometry/Room4/DoorHole" instance=ExtResource("8_xnapt")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.73089, 0)

[node name="DoorHole2" type="CSGBox3D" parent="NavigationRegion3D/Geometry/Room4"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -10.5946, -6.02238, 1.09265)
operation = 2
size = Vector3(1.20386, 3.32838, 3.20982)

[node name="SlidingDoor" parent="NavigationRegion3D/Geometry/Room4/DoorHole2" instance=ExtResource("8_xnapt")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.73089, 0)

[node name="DroneSpawner" type="Area3D" parent="NavigationRegion3D/Geometry/Room4"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.10945, -8.77804)
collision_layer = 0
collision_mask = 4

[node name="CollisionShape3D" type="CollisionShape3D" parent="NavigationRegion3D/Geometry/Room4/DroneSpawner"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -5.85115, -4.94082)
shape = SubResource("BoxShape3D_mwm07")

[node name="EnemySpawner" type="Node3D" parent="NavigationRegion3D/Geometry/Room4/DroneSpawner" node_paths=PackedStringArray("trigger_area")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.14957, 0)
script = ExtResource("11_5tn5s")
trigger_area = NodePath("..")
enemy = ExtResource("13_uqtvl")

[node name="Encounter" type="Node3D" parent="NavigationRegion3D/Geometry/Room4"]
script = ExtResource("14_3clq5")

[node name="WaveSpawner" type="Node3D" parent="NavigationRegion3D/Geometry/Room4/Encounter"]
script = ExtResource("9_gbe8j")

[node name="EnemySpawner" type="Node3D" parent="NavigationRegion3D/Geometry/Room4/Encounter/WaveSpawner"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -5.79441, 0)
script = ExtResource("15_ega8m")
enemy = ExtResource("16_x4yxp")

[node name="WaveSpawner2" type="Node3D" parent="NavigationRegion3D/Geometry/Room4/Encounter"]
script = ExtResource("9_gbe8j")

[node name="EnemySpawner" type="Node3D" parent="NavigationRegion3D/Geometry/Room4/Encounter/WaveSpawner2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -6.67156, 5.17466)
script = ExtResource("15_ega8m")
enemy = ExtResource("4_5clly")

[node name="EnemySpawner4" type="Node3D" parent="NavigationRegion3D/Geometry/Room4/Encounter/WaveSpawner2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7.57051, -1.86836, 11.4547)
script = ExtResource("15_ega8m")
enemy = ExtResource("17_2y2m7")

[node name="EnemySpawner2" type="Node3D" parent="NavigationRegion3D/Geometry/Room4/Encounter/WaveSpawner2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.63425, -6.67156, 5.17466)
script = ExtResource("15_ega8m")
enemy = ExtResource("4_5clly")

[node name="EnemySpawner3" type="Node3D" parent="NavigationRegion3D/Geometry/Room4/Encounter/WaveSpawner2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5.61667, -6.67156, 5.17466)
script = ExtResource("15_ega8m")
enemy = ExtResource("4_5clly")

[node name="CornerPodium" type="CSGBox3D" parent="NavigationRegion3D/Geometry/Room4"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7.98125, -6.18501, 12.0731)
size = Vector3(3.82294, 5.89555, 4.50072)

[node name="BuildingBase" type="CSGBox3D" parent="NavigationRegion3D/Geometry"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -65.9198, 20.1888)
size = Vector3(73.9736, 123.508, 71.9108)

[node name="Checkpoint" parent="NavigationRegion3D/Geometry/BuildingBase" instance=ExtResource("7_0mppu")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -30.2887, 62.2309, 14.5842)

[node name="tp-trigger" parent="NavigationRegion3D/Geometry/BuildingBase" node_paths=PackedStringArray("trigger_area", "tp_destination") instance=ExtResource("18_r3qmj")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -35.2, 62.9111, 12.2345)
trigger_area = NodePath("Area3D")
tp_destination = NodePath("Marker3D")

[node name="Marker3D" type="Marker3D" parent="NavigationRegion3D/Geometry/BuildingBase/tp-trigger"]

[node name="Area3D" type="Area3D" parent="NavigationRegion3D/Geometry/BuildingBase/tp-trigger"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="NavigationRegion3D/Geometry/BuildingBase/tp-trigger/Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -36.7868, 0)
shape = SubResource("BoxShape3D_m047r")

[node name="Husk" parent="." instance=ExtResource("4_1t4xu")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.79586, 12.8056)

[connection signal="body_entered" from="NavigationRegion3D/Geometry/Room2/Encounter" to="NavigationRegion3D/Geometry/Room2/Encounter/WaveSpawner" method="_on_area_3d_body_entered"]
[connection signal="all_enemies_killed" from="NavigationRegion3D/Geometry/Room2/Encounter/WaveSpawner" to="NavigationRegion3D/Geometry/Room1/DoorSubtractor/SlidingDoor" method="_on_encounter_all_enemies_killed"]
[connection signal="all_enemies_killed" from="NavigationRegion3D/Geometry/Room2/Encounter/WaveSpawner" to="NavigationRegion3D/Geometry/Room2/DoorHole/SlidingDoor" method="_on_encounter_all_enemies_killed"]
[connection signal="encounter_started" from="NavigationRegion3D/Geometry/Room2/Encounter/WaveSpawner" to="NavigationRegion3D/Geometry/Room1/DoorSubtractor/SlidingDoor" method="_on_encounter_encounter_started"]
[connection signal="enemy_died" from="NavigationRegion3D/Geometry/Room3/FlankEncounter/EnemySpawner" to="NavigationRegion3D/Geometry/Room4/DoorHole/SlidingDoor" method="_on_encounter_all_enemies_killed"]
[connection signal="body_entered" from="NavigationRegion3D/Geometry/Room4/DroneSpawner" to="NavigationRegion3D/Geometry/Room4/Encounter" method="_on_area_3d_body_entered"]
[connection signal="encounter_ended" from="NavigationRegion3D/Geometry/Room4/Encounter" to="NavigationRegion3D/Geometry/Room4/DoorHole2/SlidingDoor" method="_on_encounter_all_enemies_killed"]

[editable path="NavigationRegion3D/Geometry/Room1/Podium/Shell"]
[editable path="NavigationRegion3D/Geometry/Room1/Podium/Shell/Head"]
[editable path="NavigationRegion3D/Geometry/Room1/Podium/Shell/Head/MachineGun"]
[editable path="NavigationRegion3D/Geometry/Room1/Podium/Shell/Head/MachineGun2"]
